2010-10-13  Peter Schueller <ps@kr.tuwien.ac.at>

	* examples/Makefile.am: Fixing warning in make distcheck for one testcase.

2010-08-25  Peter Schueller <ps@kr.tuwien.ac.at>

	* src/OutputRewriter.cpp: Fixing bug with consistent systems
	and explanations.
	* examples/benchmark9/ddmeem_opeq.out: Fixing testcase.
	* examples/benchmark9/em.out: Likewise.
	* examples/benchmark9/e.out: Likewise.
	* examples/benchmark10/ddmeem_opeq.out: Likewise.
	* examples/benchmark10/em.out: Likewise.
	* examples/benchmark10/e.out: Likewise.

	* src/OutputRewriter.cpp: Fixing bug with multiple equilibria
	and subset-minimal diagnoses, including new testcase.
	* examples/medExample/master_plusloop.hex: Likewise.
	* examples/medExample/plusloop_dmem_opeq.out: Likewise.
	* examples/mcsequilibriumtests.test: Likewise.

2010-07-20  Peter Schueller <ps@kr.tuwien.ac.at>

	* Installing headers required to create custom context plugins.

2010-07-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.1.

	* configure.ac: Bump version to 1.7.1.

	* NEWS: Describe changes of version 1.7.1.

2010-07-14  Peter Schueller <ps@kr.tuwien.ac.at>

	* src/OutputRewriter.cpp: Updating to changed ASPSolver interface.
	* src/DLV_ASP_ContextAtom.cpp: Likewise.

2010-07-07  Peter Schueller <ps@kr.tuwien.ac.at>

	* src/OutputRewriter.cpp: Using new ASPSolver interface.
	* src/DLV_ASP_ContextAtom.cpp: Likewise.

2010-06-25  Peter Schueller <ps@kr.tuwien.ac.at>

	Release version 1.7.0.

	* configure.ac: Canonicalized plugin name for packaging.

2010-06-24  Peter Schueller <ps@kr.tuwien.ac.at>

	* src/Makefile.am: added so-version for library which is used by plugin
	and additional context plugins.
	* examples/Makefile.am: Not installing test libraries, but making them
	dlopen-able modules.
	* src/MCSdiagexplPlugin.cpp: Not enabling output rewriter if plugin not
	enabled.
	* include/InputParserDriver.h: Added possibility for parser debugging.
	* configure.ac: Version number for release.
